# CyberArcMSP-Email

./: .env.example  .gitignore  INSTALL.md  LICENSE  PRD.md  README.md  api_report.md  apollo_search.py  company.py  database.py  demo.html  dynamic_config_proposal.md  email_engine.py  env.example  final_real_email.html  live_email_report.md  main.py  models.py  package-lock.json  package.json  prompt.py  pyproject.toml  real_time_campaign.py  server.py
.github/workflows/: build.yml  ci.yml
Scripts/: Code.gs  prompt.gs
app/: ai_pipeline.py  database.py  email_engine.py  main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/controllers/: accounts.py  campaigns.py  database.py  health.py  leads.py  replies.py  sequences.py  settings.py  setup.py  track.py  unsubscribe.py
app/core/: .vault_key  .vault_salt  config.py  db.py  sse.py  state.py  vault.py
app/data/srvdb_store/: metadata.db
app/models/: __init__.py  base.py  campaign.py  email_account.py  identity.py  lead.py  reply.py  sequence.py  setting.py
app/repositories/: __init__.py  account_repository.py  base_repository.py  lead_repository.py
app/schemas/: __init__.py  account.py  campaign.py  lead.py  setting.py
app/services/: __init__.py  campaign_service.py  lead_service.py  sequence_service.py
app/utils/: apollo_search.py  company.py  email_engine.py  llm_client.py  payload_sanitizer.py  prompt.py  scoring.py
electron/: main.js  preload.js  splash.html
scripts/: .build_send.env.example  build_linux_release.sh  build_send.py  download_uv.py  make_ico.py  run_live_test.py
tests/: conftest.py  send_links.py  test_apollo.py  test_dynamic_config.py  test_edge_cases.py  test_email.py  test_multi_identity_flow.py  test_payload_sanitizer.py
ui/: index.html  index.html.bak
ui/css/: components.css  layout.css  variables.css
ui/js/: api.js  app.js  router.js  sse.js  toast.js  utils.js
ui/js/pages/: dashboard.js  inboxes.js  leads.js  outbox.js  persona.js  records.js  replies.js  search.js  sequences.js  settings.js
